2005-05-22  Pierre Chifflier  <pollux@wzdftpd.net>

	* First svn commit !
	* bugfix: rename setkey in wzd_crypt to avoid conflict in NetBSD
	* bugfix: send error to log if server can't create pid file
	* bugfix: send error to stderr if server can't open log file
	* bugfix: really disable MLST and MLSD

2005-05-18  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- cvs commit TAG: rel-0-5-3

2005-05-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new logging system, supporting different channels etc.

2005-05-12  Cyprien Laplace <cyprien33@laposte.net>

	* bugfix: usercache invalidation and pointer not updated
	* bugfix: FEAT must return "REST STREAM" to be compliant with
	draft-ietf-ftpext-mlst-16.txt

2005-05-10  Cyprien Laplace <cyprien33@laposte.net>

	* bugfix: race condition on client logging and listing connected clients

2005-05-09  Cyprien Laplace <cyprien33@laposte.net>

	* Added TOK_APPE for crc
	* Show speed show on APPE
	* bugfix: minor memory leak in hash table insert
	* Logfile ans Syslog can be used together

2005-05-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: unable to add users in pgsql backend

2005-05-03  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: IP, stats not working for mysql backend, problem with groups
	* bugfix: same for pgsql backend
	* bugfix: unable to remove last ip slot for user/group

2005-04-28  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: added functions to access filesystem to work properly with
	unicode, large files etc.

2005-04-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: test for UTF-8 before converting blindly in LIST
	* code: use C99 types to avoid #ifdefs when printing u64
	* feature: new command SITE SECTIONS

2005-04-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: added postgresql backend
	* feature: added SHA1 support in libwzd-auth

2005-04-18  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- cvs commit TAG: rel-0-5-2
