@@ -1012,7 +1012,6 @@ int tls_close_data(wzd_context_t * context)
 
 int tls_free(wzd_context_t * context)
 {
-  out_log(LEVEL_INFO,"tls_free\n");
   tls_close_data(context);
   if (context->tls.session) {
     int ret;
